[project]
name = "pywfm"
description = "An asynchronous Python wrapper for Warframe.Market API"
authors = [{ name = "aldi-f" }]
dependencies = ["aiohttp", "msgspec"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/aldi-f/pywfm"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-url = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
source = "vcs"

[tool.pyright]
venvPath = "."
venv = "venv"
